feat: expose digital twins as ResearchSubject
